add js section question

--- a/pricing.html
+++ b/pricing.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
+    <script src="./js/question.js" defer></script>
   </head>
   <body>
     <header class="header section">
@@ -200,12 +201,21 @@
           </p>
           <ul class="question-list">
             <li class="question-item">
-              <svg class="icon-question" width="24" height="24">
-                <use href="./images/icons.svg#icon-plus-circle"></use>
-              </svg>
-              <b class="question-text">What are my payment option?</b>
+              <div class="wrap-icon-text">
+                <svg class="icon-question" width="24" height="24">
+                  <use href="./images/icons.svg#icon-plus-circle"></use>
+                </svg>
+                <b class="question-text">What are my payment option?</b>
+              </div>
+              <p class="question-item-text">
+                After creating your account you will have an oppurtunity to
+                create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically.
+                Then, invited user will have to confirm his account by e-mail
+                and finish userd onboarding.
+              </p>
             </li>
-            <li class="question-item colum">
+            <li class="question-item">
               <div class="wrap-icon-text">
                 <svg class="icon-question" width="24" height="24">
                   <use href="./images/icons.svg#icon-minus-circle"></use>
@@ -223,16 +233,34 @@
               </p>
             </li>
             <li class="question-item">
-              <svg class="icon-question" width="24" height="24">
-                <use href="./images/icons.svg#icon-plus-circle"></use>
-              </svg>
-              <b class="question-text">Can I upgrade my plan?</b>
+              <div class="wrap-icon-text">
+                <svg class="icon-question" width="24" height="24">
+                  <use href="./images/icons.svg#icon-plus-circle"></use>
+                </svg>
+                <b class="question-text">Can I upgrade my plan?</b>
+              </div>
+              <p class="question-item-text">
+                After creating your account you will have an oppurtunity to
+                create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically.
+                Then, invited user will have to confirm his account by e-mail
+                and finish userd onboarding.
+              </p>
             </li>
             <li class="question-item">
-              <svg class="icon-question" width="24" height="24">
-                <use href="./images/icons.svg#icon-plus-circle"></use>
-              </svg>
-              <b class="question-text">Can I cancel my plan at anytime?</b>
+              <div class="wrap-icon-text">
+                <svg class="icon-question" width="24" height="24">
+                  <use href="./images/icons.svg#icon-plus-circle"></use>
+                </svg>
+                <b class="question-text">Can I cancel my plan at anytime?</b>
+              </div>
+              <p class="question-item-text">
+                After creating your account you will have an oppurtunity to
+                create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically.
+                Then, invited user will have to confirm his account by e-mail
+                and finish userd onboarding.
+              </p>
             </li>
           </ul>
         </div>
