--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
+    <script src="./js/menu.js" defer></script>
   </head>
   <body>
     <header class="header section">
@@ -31,6 +32,36 @@
           <li><button class="button-in" type="button">Sign In</button></li>
           <li><button class="button-up" type="button">Sign Up</button></li>
         </ul>
+
+        <button class="burger-btn" type="button" data-menu-open>
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-hero-menu"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close" data-menu-close>
+            <svg class="mobile-icons-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li><a class="mobile-link" href="./index.html">Product</a></li>
+              <li>
+                <a class="mobile-link" href="./customers.html">Customers</a>
+              </li>
+              <li><a class="mobile-link" href="./pricing.html">Pricing</a></li>
+              <li><a class="mobile-link" href="">Resources</a></li>
+            </ul>
+          </nav>
+          <ul class="mobile-btn-menu">
+            <li><button class="button-in" type="button">Sign In</button></li>
+            <li><button class="button-up" type="button">Sign Up</button></li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -45,10 +76,10 @@
               next user experience.
             </p>
             <ul class="hero-list">
-              <li>
+              <li class="hero-item">
                 <button class="hero-btn" type="button">Get started</button>
               </li>
-              <li>
+              <li class="hero-item">
                 <button class="hero-video-btn" type="button">
                   <svg class="icon-play" width="20" height="18">
                     <use href="./images/icons.svg#icon-play"></use>
@@ -58,12 +89,25 @@
               </li>
             </ul>
           </div>
-          <img
-            src="./images/hero-img.png"
-            alt="people"
-            width="610"
-            height="555"
-          />
+          <picture calss="hero-img">
+            <source
+              srcset="
+                ./images/mobile-hero-img.png 1x,
+                ./images/mobile-hero-img.png 2x
+              "
+              src="./images/mobile-hero-img.png"
+              width="338"
+              height="312"
+              media="(max-width: 1150px)"
+            />
+            <img
+              srcset="./images/hero-img.png 1x, ./images/hero-img@2x.png 2x"
+              src="./images/hero-img.png"
+              alt="people"
+              width="610"
+              height="555"
+            />
+          </picture>
         </div>
       </section>
       <!-- Product -->
