add adaptive section product and managment

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 ./images/mobile-hero-img.png 2x
               "
               src="./images/mobile-hero-img.png"
-              width="338"
-              height="312"
+              width="350"
+              height="320"
               media="(max-width: 1150px)"
             />
             <img
@@ -195,16 +195,32 @@
               </li>
             </ul>
           </div>
-          <img
-            src="./images/management-img.png"
-            alt="document"
-            width="540"
-            height="500"
-          />
+          <picture class="management-img">
+            <source
+              srcset="
+                ./images/mobile-management-img.png    1x,
+                ./images/mobile-management-img@2x.png 2x
+              "
+              src="./images/mobile-management-img.png"
+              width="350"
+              height="320"
+              media="(max-width: 1150px)"
+            />
+            <img
+              srcset="
+                ./images/management-img.png    1x,
+                ./images/management-img@2x.png 2x
+              "
+              src="./images/management-img.png"
+              alt="document"
+              width="540"
+              height="500"
+            />
+          </picture>
         </div>
       </section>
       <!-- Support -->
-      <section class="section support-section">
+      <!-- <section class="section support-section">
         <div class="container">
           <img
             src="./images/support-img.png"
@@ -257,9 +273,9 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Collaborative -->
-      <section class="section collaborative-section">
+      <!-- <section class="section collaborative-section">
         <div class="container">
           <div class="collaborative-container">
             <h2 class="title">
@@ -295,9 +311,9 @@
             height="500"
           />
         </div>
-      </section>
+      </section> -->
       <!-- Process -->
-      <section class="section process-section">
+      <!-- <section class="section process-section">
         <div class="container">
           <h2 class="section-title">Quick & Easy Process</h2>
           <p class="section-text">
@@ -339,9 +355,9 @@
             Contact our expert
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Strategies -->
-      <section class="section strategies-section">
+      <!-- <section class="section strategies-section">
         <div class="container">
           <h2 class="strategies-title">Contents Strategies</h2>
           <p class="strategies-text">
@@ -396,9 +412,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Price -->
-      <section class="section price-section">
+      <!-- <section class="section price-section">
         <div class="container">
           <h2 class="price-title">Price Table</h2>
           <p class="price-text">We offer competitive price</p>
@@ -479,9 +495,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Clients -->
-      <section class="section clients-section">
+      <!-- <section class="section clients-section">
         <div class="container">
           <h2 class="section-title">What Clients Say</h2>
           <p class="section-text">
@@ -551,9 +567,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- promo -->
-      <section class="section promo-section">
+      <!-- <section class="section promo-section">
         <div class="container">
           <h2 class="visually-hidden">Promo</h2>
           <div class="wrap-promo">
@@ -571,9 +587,9 @@
             height="331"
           />
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="section footer-section">
+    <!-- <footer class="section footer-section">
       <div class="container">
         <div class="footer-wrap-container">
           <div class="wrap-logo-sociale">
@@ -674,6 +690,6 @@
           Made With Love By Figmaland All Right Reserved
         </p>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
