add adaptive section collaborative and process

--- a/index.html
+++ b/index.html
@@ -220,14 +220,31 @@
         </div>
       </section>
       <!-- Support -->
-      <!-- <section class="section support-section">
+      <section class="section support-section">
         <div class="container">
-          <img
-            src="./images/support-img.png"
-            alt="laptop"
-            width="540"
-            height="500"
-          />
+          <picture>
+            <source
+              srcset="
+                ./images/mobile-support-img.png    1x,
+                ./images/mobile-support-img@2x.png 2x
+              "
+              src="./images/mobile-support-img.png"
+              width="350"
+              height="320"
+              media="(max-width: 1150px)"
+            />
+            <img
+              srcset="
+                ./images/support-img.png    1x,
+                ./images/support-img@2x.png 2x
+              "
+              src="./images/support-img.png"
+              alt="laptop"
+              width="540"
+              height="500"
+              class="support-img"
+            />
+          </picture>
           <div class="support-container">
             <h2 class="title">
               Easier decision making for
@@ -273,9 +290,9 @@
             </ul>
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- Collaborative -->
-      <!-- <section class="section collaborative-section">
+      <section class="section collaborative-section">
         <div class="container">
           <div class="collaborative-container">
             <h2 class="title">
@@ -304,16 +321,33 @@
               </li>
             </ul>
           </div>
-          <img
-            src="./images/collaboration-img.png"
-            alt="document"
-            width="540"
-            height="500"
-          />
+          <picture>
+            <source
+              srcset="
+                ./images/mobile-collaboration-img.png    1x,
+                ./images/mobile-collaboration-img@2x.png 2x
+              "
+              src="./images/mobile-collaboration-img.png"
+              width="350"
+              height="320"
+              media="(max-width: 1150px)"
+            />
+            <img
+              srcset="
+                ./images/collaboration-img.png    1x,
+                ./images/collaboration-img@2x.png 2x
+              "
+              src="./images/collaboration-img.png"
+              alt="document"
+              width="540"
+              height="500"
+              class="collaboration-img"
+            />
+          </picture>
         </div>
-      </section> -->
+      </section>
       <!-- Process -->
-      <!-- <section class="section process-section">
+      <section class="section process-section">
         <div class="container">
           <h2 class="section-title">Quick & Easy Process</h2>
           <p class="section-text">
@@ -322,30 +356,97 @@
           </p>
           <ul class="process-list">
             <li class="process-card">
-              <img
-                src="./images/avatar1.png"
-                alt="women"
-                width="98"
-                height="98"
-              />
+              <picture class="procss-img">
+                <source
+                  srcset="
+                    ./images/mobile-avatar1.png    1x,
+                    ./images/mobile-avatar1@2x.png 2x
+                  "
+                  src="./images/mobile-avatar1.png"
+                  width="90"
+                  height="90"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/avatar1.png 1x, ./images/avatar1@2x.png 2x"
+                  src="./images/avatar1.png"
+                  alt="women"
+                  width="98"
+                  height="98"
+                />
+              </picture>
               <div class="wrap-card-text">
                 <p class="process-text">I can take care of your pitch</p>
               </div>
             </li>
             <li class="process-card reverse">
-              <img src="./images/avatar2.png" alt="women" width="98" />
+              <picture class="procss-img">
+                <source
+                  srcset="
+                    ./images/mobile-avatar2.png    1x,
+                    ./images/mobile-avatar2@2x.png 2x
+                  "
+                  src="./images/mobile-avatar2.png"
+                  width="90"
+                  height="90"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/avatar2.png 1x, ./images/avatar2@2x.png 2x"
+                  src="./images/avatar2.png"
+                  alt="women"
+                  width="98"
+                  height="98"
+                />
+              </picture>
               <div class="wrap-card-text">
                 <p class="process-text">I can prototype your app</p>
               </div>
             </li>
-            <li class="process-card reverse">
-              <img src="./images/avatar3.png" alt="men" width="98" />
+            <li class="process-card last reverse">
+              <picture class="procss-img">
+                <source
+                  srcset="
+                    ./images/mobile-avatar3.png    1x,
+                    ./images/mobile-avatar3@2x.png 2x
+                  "
+                  src="./images/mobile-avatar3.png"
+                  width="90"
+                  height="90"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/avatar3.png 1x, ./images/avatar3@2x.png 2x"
+                  src="./images/avatar3.png"
+                  alt="women"
+                  width="98"
+                  height="98"
+                />
+              </picture>
               <div class="wrap-card-text">
                 <p class="process-text">I can take care of your pitch.</p>
               </div>
             </li>
-            <li class="process-card">
-              <img src="./images/avatar4.png" alt="men" width="98" />
+            <li class="process-card last">
+              <picture class="procss-img">
+                <source
+                  srcset="
+                    ./images/mobile-avatar4.png    1x,
+                    ./images/mobile-avatar4@2x.png 2x
+                  "
+                  src="./images/mobile-avatar4.png"
+                  width="90"
+                  height="90"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/avatar4.png 1x, ./images/avatar4@2x.png 2x"
+                  src="./images/avatar4.png"
+                  alt="women"
+                  width="98"
+                  height="98"
+                />
+              </picture>
               <div class="wrap-card-text">
                 <p class="process-text">I can help marketing strategy</p>
               </div>
@@ -355,7 +456,7 @@
             Contact our expert
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Strategies -->
       <!-- <section class="section strategies-section">
         <div class="container">
