add adaptive section strategies

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
       </section>
       <!-- Strategies -->
-      <!-- <section class="section strategies-section">
+      <section class="section strategies-section">
         <div class="container">
           <h2 class="strategies-title">Contents Strategies</h2>
           <p class="strategies-text">
@@ -468,8 +468,9 @@
           <ul class="strategies-list">
             <li class="strategies-card">
               <img
-                class="strategies-image"
+                srcset="./images/image1.jpg 1x, ./images/image1@2x.jpg 2x"
                 src="./images/image1.jpg"
+                class="strategies-image"
                 alt="document"
                 width="350"
                 height="185"
@@ -483,8 +484,9 @@
             </li>
             <li class="strategies-card">
               <img
-                class="strategies-image"
+                srcset="./images/image2.jpg 1x, ./images/image2@2x.jpg 2x"
                 src="./images/image2.jpg"
+                class="strategies-image"
                 alt="people"
                 width="350"
                 height="185"
@@ -498,8 +500,9 @@
             </li>
             <li class="strategies-card">
               <img
-                class="strategies-image"
+                srcset="./images/image3.jpg 1x, ./images/image2@2x.jpg 2x"
                 src="./images/image3.jpg"
+                class="strategies-image"
                 alt="city"
                 width="350"
                 height="185"
@@ -513,7 +516,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Price -->
       <!-- <section class="section price-section">
         <div class="container">
