add adaptive section price

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         </div>
       </section>
       <!-- Price -->
-      <!-- <section class="section price-section">
+      <section class="section price-section">
         <div class="container">
           <h2 class="price-title">Price Table</h2>
           <p class="price-text">We offer competitive price</p>
@@ -599,7 +599,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Clients -->
       <!-- <section class="section clients-section">
         <div class="container">
