add adaptive section client and promo

--- a/index.html
+++ b/index.html
@@ -601,12 +601,15 @@
         </div>
       </section>
       <!-- Clients -->
-      <!-- <section class="section clients-section">
+      <section class="section clients-section">
         <div class="container">
           <h2 class="section-title">What Clients Say</h2>
           <p class="section-text">
-            Problems trying to resolve the conflict between<br />
-            the two major realms of Classical physics: Newtonian mechanics
+            Problems trying to resolve the conflict between
+            <span class="hyphenation"
+              >the two major realms of Classical physics: Newtonian
+              mechanics</span
+            >
           </p>
           <ul class="clients-list">
             <li class="clients-card">
@@ -617,8 +620,12 @@
               <div class="wrap-clients">
                 <div class="wrap-card-image">
                   <img
-                    class="clients-image"
+                    srcset="
+                      ./images/ellipse1.png    1x,
+                      ./images/ellipse1@2x.png 2x
+                    "
                     src="./images/ellipse1.png"
+                    class="clients-image"
                     alt="women"
                     width="50"
                   />
@@ -637,8 +644,12 @@
               <div class="wrap-clients">
                 <div class="wrap-card-image">
                   <img
-                    class="clients-image"
+                    srcset="
+                      ./images/ellipse2.png    1x,
+                      ./images/ellipse2@2x.png 2x
+                    "
                     src="./images/ellipse2.png"
+                    class="clients-image"
                     alt="men"
                     width="50"
                   />
@@ -657,8 +668,12 @@
               <div class="wrap-clients">
                 <div class="wrap-card-image">
                   <img
-                    class="clients-image"
+                    srcset="
+                      ./images/ellipse3.png    1x,
+                      ./images/ellipse3@2x.png 2x
+                    "
                     src="./images/ellipse3.png"
+                    class="clients-image"
                     alt="men"
                     width="50"
                   />
@@ -671,9 +686,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- promo -->
-      <!-- <section class="section promo-section">
+      <section class="section promo-section">
         <div class="container">
           <h2 class="visually-hidden">Promo</h2>
           <div class="wrap-promo">
@@ -691,7 +706,7 @@
             height="331"
           />
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="section footer-section">
       <div class="container">
