--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
             </button>
           </div>
           <img
+            srcset="./images/screen.png 1x, ./images/screen@2x.png 2x"
             src="./images/screen.png"
             alt="screen"
             width="351"
@@ -708,7 +709,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="section footer-section">
+    <footer class="section footer-section">
       <div class="container">
         <div class="footer-wrap-container">
           <div class="wrap-logo-sociale">
@@ -809,6 +810,6 @@
           Made With Love By Figmaland All Right Reserved
         </p>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
