update css footer

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
             </ul>
           </div>
           <div class="wrap-title-list">
-            <b class="footer-title">Resource</b>
+            <p class="footer-title">Resource</p>
             <ul class="footer-list">
               <li class="footer-card">
                 <a class="footer-link" href="">About Us</a>
@@ -761,7 +761,7 @@
             </ul>
           </div>
           <div class="wrap-title-list footer">
-            <b class="footer-title">Legal Stuff</b>
+            <p class="footer-title">Legal Stuff</p>
             <ul class="footer-list">
               <li class="footer-card">
                 <a class="footer-link" href="">Disclaimer</a>
@@ -778,10 +778,9 @@
             </ul>
           </div>
           <div class="wrap-title-form-button">
-            <b class="footer-title form"
-              >knowing you're always on<br />
-              the best energy deal.
-            </b>
+            <p class="footer-title form">
+              knowing you're always on the best energy deal.
+            </p>
             <form class="order-form" id="orderForm">
               <div class="form-group">
                 <label for="user-tel" class="name-label visually-hidden"
