add adaptive page price section effects

--- a/customers.html
+++ b/customers.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
+    <script src="./js/menu.js" defer></script>
   </head>
   <body>
     <header class="header section">
@@ -31,11 +32,41 @@
           <li><button class="button-in" type="button">Sign In</button></li>
           <li><button class="button-up" type="button">Sign Up</button></li>
         </ul>
+
+        <button class="burger-btn" type="button" data-menu-open>
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-hero-menu"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close" data-menu-close>
+            <svg class="mobile-icons-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li><a class="mobile-link" href="./index.html">Product</a></li>
+              <li>
+                <a class="mobile-link" href="./customers.html">Customers</a>
+              </li>
+              <li><a class="mobile-link" href="./pricing.html">Pricing</a></li>
+              <li><a class="mobile-link" href="">Resources</a></li>
+            </ul>
+          </nav>
+          <ul class="mobile-btn-menu">
+            <li><button class="button-in" type="button">Sign In</button></li>
+            <li><button class="button-up" type="button">Sign Up</button></li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
       <!-- Our Client -->
-      <section class="section client-section">
+      <!-- <section class="section client-section">
         <div class="container">
           <h1 class="client-title">Our Clients</h1>
           <ul class="client-list">
@@ -69,9 +100,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Choose Product? -->
-      <section class="section choose-section">
+      <!-- <section class="section choose-section">
         <div class="container">
           <h2 class="section-title">Why Choose Product?</h2>
           <ul class="choose-list">
@@ -116,9 +147,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- How Product -->
-      <section class="section product-work">
+      <!-- <section class="section product-work">
         <div class="container">
           <h2 class="section-title">How Product Work?</h2>
           <ul class="product-work-list">
@@ -163,9 +194,9 @@
             Get in touch with us
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Offers -->
-      <section class="section offer-section">
+      <!-- <section class="section offer-section">
         <div class="container">
           <h2 class="section-title">
             Join thousand of other who have already received offers
@@ -221,7 +252,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- promo -->
       <section class="section promo-section customers">
         <div class="container">
@@ -243,7 +274,7 @@
         </div>
       </section>
     </main>
-    <footer class="section footer-section customers">
+    <footer class="section footer-section">
       <div class="container">
         <div class="footer-wrap-container">
           <div class="wrap-logo-sociale">
@@ -278,7 +309,7 @@
             </ul>
           </div>
           <div class="wrap-title-list">
-            <b class="footer-title">Resource</b>
+            <p class="footer-title">Resource</p>
             <ul class="footer-list">
               <li class="footer-card">
                 <a class="footer-link" href="">About Us</a>
@@ -295,7 +326,7 @@
             </ul>
           </div>
           <div class="wrap-title-list footer">
-            <b class="footer-title">Legal Stuff</b>
+            <p class="footer-title">Legal Stuff</p>
             <ul class="footer-list">
               <li class="footer-card">
                 <a class="footer-link" href="">Disclaimer</a>
@@ -312,10 +343,9 @@
             </ul>
           </div>
           <div class="wrap-title-form-button">
-            <b class="footer-title form"
-              >knowing you're always on<br />
-              the best energy deal.
-            </b>
+            <p class="footer-title form">
+              knowing you're always on the best energy deal.
+            </p>
             <form class="order-form" id="orderForm">
               <div class="form-group">
                 <label for="user-tel" class="name-label visually-hidden"
