the end adaptive page price

--- a/pricing.html
+++ b/pricing.html
@@ -248,7 +248,7 @@
         </div>
       </section>
       <!-- Question -->
-      <!-- <section class="section question-section">
+      <section class="section question-section">
         <div class="container">
           <h2 class="question-title">Frequently asked question</h2>
           <p class="section-question-text">
@@ -319,7 +319,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- promo -->
       <section class="section promo-section pricing">
         <div class="container">
