--- a/customers.html
+++ b/customers.html
@@ -66,7 +66,7 @@
     </header>
     <main>
       <!-- Our Client -->
-      <!-- <section class="section client-section">
+      <section class="section client-section">
         <div class="container">
           <h1 class="client-title">Our Clients</h1>
           <ul class="client-list">
@@ -86,7 +86,7 @@
             </li>
             <li class="client-item">
               <a class="client-link" href="https://www.microsoft.com/">
-                <svg class="client-logo" width="213" height="44">
+                <svg class="client-logo">
                   <use href="./images/icons.svg#icon-microsoft-logo"></use>
                 </svg>
               </a>
@@ -100,9 +100,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Choose Product? -->
-      <!-- <section class="section choose-section">
+      <section class="section choose-section">
         <div class="container">
           <h2 class="section-title">Why Choose Product?</h2>
           <ul class="choose-list">
@@ -147,7 +147,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- How Product -->
       <!-- <section class="section product-work">
         <div class="container">
