--- a/customers.html
+++ b/customers.html
@@ -149,12 +149,29 @@
         </div>
       </section>
       <!-- How Product -->
-      <!-- <section class="section product-work">
+      <section class="section product-work">
         <div class="container">
           <h2 class="section-title">How Product Work?</h2>
           <ul class="product-work-list">
             <li class="product-work-card">
-              <img src="./images/mac1.jpg" alt="mac" width="500" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/mobile-mac1.jpg    1x,
+                    ./images/mobile-mac1@2x.jpg 2x
+                  "
+                  width="350"
+                  height="195"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/mac1.jpg 1x, ./images/mac1@2x.jpg 2x"
+                  src="./images/mac1.jpg"
+                  alt="mac"
+                  width="500"
+                  class="product-work-img"
+                />
+              </picture>
               <div class="wrap-product-card">
                 <span class="step">STEP 1</span>
                 <h3 class="card-title">Apply for a product</h3>
@@ -167,7 +184,24 @@
               </div>
             </li>
             <li class="product-work-card reverse">
-              <img src="./images/mac2.jpg" alt="mac" width="500" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/mobile-mac2.jpg    1x,
+                    ./images/mobile-mac2@2x.jpg 2x
+                  "
+                  width="350"
+                  height="195"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/mac2.jpg 1x, ./images/mac2@2x.jpg 2x"
+                  src="./images/mac2.jpg"
+                  alt="mac"
+                  width="500"
+                  class="product-work-img"
+                />
+              </picture>
               <div class="wrap-product-card">
                 <span class="step">STEP 2</span>
                 <h3 class="card-title">Pay fully refundable</h3>
@@ -179,7 +213,24 @@
               </div>
             </li>
             <li class="product-work-card">
-              <img src="./images/mac3.jpg" alt="mac" width="500" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/mobile-mac3.jpg    1x,
+                    ./images/mobile-mac3@2x.jpg 2x
+                  "
+                  width="350"
+                  height="195"
+                  media="(max-width: 1150px)"
+                />
+                <img
+                  srcset="./images/mac3.jpg 1x, ./images/mac3@2x.jpg 2x"
+                  src="./images/mac3.jpg"
+                  alt="mac"
+                  width="500"
+                  class="product-work-img"
+                />
+              </picture>
               <div class="wrap-product-card">
                 <span class="step">STEP 3</span>
                 <h3 class="card-title">Completion</h3>
@@ -194,7 +245,7 @@
             Get in touch with us
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Offers -->
       <!-- <section class="section offer-section">
         <div class="container">
