--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
               </li>
             </ul>
           </div>
-          <picture calss="hero-img">
+          <picture>
             <source
               srcset="
                 ./images/mobile-hero-img.png 1x,
                 ./images/mobile-hero-img.png 2x
               "
-              src="./images/mobile-hero-img.png"
               width="350"
               height="320"
               media="(max-width: 1150px)"
@@ -106,6 +105,7 @@
               alt="people"
               width="610"
               height="555"
+              class="hero-img"
             />
           </picture>
         </div>
@@ -195,13 +195,12 @@
               </li>
             </ul>
           </div>
-          <picture class="management-img">
+          <picture>
             <source
               srcset="
                 ./images/mobile-management-img.png    1x,
                 ./images/mobile-management-img@2x.png 2x
               "
-              src="./images/mobile-management-img.png"
               width="350"
               height="320"
               media="(max-width: 1150px)"
@@ -215,6 +214,7 @@
               alt="document"
               width="540"
               height="500"
+              class="management-img"
             />
           </picture>
         </div>
@@ -228,7 +228,6 @@
                 ./images/mobile-support-img.png    1x,
                 ./images/mobile-support-img@2x.png 2x
               "
-              src="./images/mobile-support-img.png"
               width="350"
               height="320"
               media="(max-width: 1150px)"
@@ -327,7 +326,6 @@
                 ./images/mobile-collaboration-img.png    1x,
                 ./images/mobile-collaboration-img@2x.png 2x
               "
-              src="./images/mobile-collaboration-img.png"
               width="350"
               height="320"
               media="(max-width: 1150px)"
@@ -356,13 +354,12 @@
           </p>
           <ul class="process-list">
             <li class="process-card">
-              <picture class="procss-img">
+              <picture>
                 <source
                   srcset="
                     ./images/mobile-avatar1.png    1x,
                     ./images/mobile-avatar1@2x.png 2x
                   "
-                  src="./images/mobile-avatar1.png"
                   width="90"
                   height="90"
                   media="(max-width: 1150px)"
@@ -373,6 +370,7 @@
                   alt="women"
                   width="98"
                   height="98"
+                  class="procss-img"
                 />
               </picture>
               <div class="wrap-card-text">
@@ -380,13 +378,12 @@
               </div>
             </li>
             <li class="process-card reverse">
-              <picture class="procss-img">
+              <picture>
                 <source
                   srcset="
                     ./images/mobile-avatar2.png    1x,
                     ./images/mobile-avatar2@2x.png 2x
                   "
-                  src="./images/mobile-avatar2.png"
                   width="90"
                   height="90"
                   media="(max-width: 1150px)"
@@ -397,6 +394,7 @@
                   alt="women"
                   width="98"
                   height="98"
+                  class="procss-img"
                 />
               </picture>
               <div class="wrap-card-text">
@@ -404,13 +402,12 @@
               </div>
             </li>
             <li class="process-card last reverse">
-              <picture class="procss-img">
+              <picture>
                 <source
                   srcset="
                     ./images/mobile-avatar3.png    1x,
                     ./images/mobile-avatar3@2x.png 2x
                   "
-                  src="./images/mobile-avatar3.png"
                   width="90"
                   height="90"
                   media="(max-width: 1150px)"
@@ -421,6 +418,7 @@
                   alt="women"
                   width="98"
                   height="98"
+                  class="procss-img"
                 />
               </picture>
               <div class="wrap-card-text">
@@ -428,13 +426,12 @@
               </div>
             </li>
             <li class="process-card last">
-              <picture class="procss-img">
+              <picture>
                 <source
                   srcset="
                     ./images/mobile-avatar4.png    1x,
                     ./images/mobile-avatar4@2x.png 2x
                   "
-                  src="./images/mobile-avatar4.png"
                   width="90"
                   height="90"
                   media="(max-width: 1150px)"
@@ -445,6 +442,7 @@
                   alt="women"
                   width="98"
                   height="98"
+                  class="procss-img"
                 />
               </picture>
               <div class="wrap-card-text">
