the end adaptive

--- a/customers.html
+++ b/customers.html
@@ -247,7 +247,7 @@
         </div>
       </section>
       <!-- Offers -->
-      <!-- <section class="section offer-section">
+      <section class="section offer-section">
         <div class="container">
           <h2 class="section-title">
             Join thousand of other who have already received offers
@@ -303,7 +303,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- promo -->
       <section class="section promo-section customers">
         <div class="container">
@@ -325,7 +325,7 @@
         </div>
       </section>
     </main>
-    <footer class="section footer-section">
+    <footer class="footer-section customers">
       <div class="container">
         <div class="footer-wrap-container">
           <div class="wrap-logo-sociale">
